--- a/public/styles.css
+++ b/public/styles.css
@@ -14,9 +14,10 @@ html {
 /* Define a class for your rounded blue button */
 .rounded-button {
   border-radius: 1000px; /* Adjust the value to control the roundness */
-  background-color: lightblue; /* Set the background color to blue */
-  color: darkblue; /* Set the text color to white */
+  background-color: #0b57d0; /* Set the background color to blue -- this is the color from gmail's send button */
+  color: white; /* Set the text color to white */
   padding: 5px; /* Add padding to make the button visually appealing */
+  padding-inline: 15px; /* Add padding to make the button visually appealing */
   font-size: 14px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -28,7 +29,7 @@ html {
 
 /* Define a hover effect for the button */
 .rounded-button:hover {
-  background-color: skyblue; /* Change the background color on hover */
+  background-color: #1a73e8; /* Change the background color on hover,  this is the color from gmail's send button */
 }
 
 
@@ -62,24 +63,6 @@ select {
   border: none;
 }
 
-
-.button-10 {
-    align-items: center;
-    padding: 6px 14px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
-    border-radius: 3px;
-
-    color: #fff;
-    background: linear-gradient(180deg, #4B91F7 0%, #367AF6 100%);
-    background-origin: border-box;
-    box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
-}
-
-.button-10:focus {
-  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1.5px rgba(54, 122, 246, 0.25), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
-  outline: 0;
-}
-
 .input_box {
   display: inline-block;
   width: 30%;
@@ -89,6 +72,12 @@ select {
   background-color: rgb(255, 218, 218);
   border-radius: 5px; /* Adjust the value to control the roundness */
   /* margin: 0.5%; */
+}
+
+.clock_formatting {
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .first_patient {
